--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
       </div>
       <div>
         <p>Дополнительная информация</p>
+         <a href="tel:0972082906">+380972082906</a>
         <textarea class="form-control" name="textarea" rows="1"></textarea>
       </div>
       <div>
